# game-engine-c

./: .gitignore  CMakeLists.txt  README.md  highscores.txt
include/: audio.h  enemy.h  game.h  gengine.h  highscore.h  item.h  map.h  player.h  projectile.h  raycaster.h  renderer.h  renderer3d.h  state.h
src/: audio.c  enemy.c  game.c  gengine.c  highscore.c  item.c  main.c  map.c  player.c  projectile.c  raycaster.c  renderer.c  renderer3d.c  state.c
